# Blender-mcp

./: LICENSE  README.md  addon.py  pyproject.toml
src/blender_mcp/: __init__.py  server.py
