[project]
name = "blender-mcp"
version = "2.0.0"
description = "The ultimate Blender integration through the Model Context Protocol - control everything in Blender via AI"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Aymen Mabrouk"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.3.0",
]

[project.scripts]
blender-mcp = "blender_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
